--- a/public/index.htm
+++ b/public/index.htm
@@ -3,6 +3,7 @@
 <head>
     <title>Gecko Tracker</title>
     <link href="assets/css/styles.css" rel="stylesheet" type="text/css"/>
+    <link href="assets/css/grid.css" rel="stylesheet" type="text/css"/>
     <link href="assets/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
     <script src="assets/libs/angular.min.js"></script>
     <script src="app.js"></script>
@@ -18,10 +19,21 @@
     </div>
 
     <div class='content' ng-controller='GeckoListController'>
-        <div ng-repeat='gecko in geckos' class="gecko-card" ng-class=gecko.sex>
-            <i class='fa fa-mars' ng-if="gecko.sex == 'male'"></i>
-            <i class='fa fa-venus' ng-if="gecko.sex == 'female'"></i>
-            {{gecko.name}}
+        <div ng-repeat='gecko in geckos' class="gecko-card grid" ng-class=gecko.sex>
+            <div class="col-1-4">
+                <i class='fa fa-mars' ng-if="gecko.sex == 'male'"></i>
+                <i class='fa fa-venus' ng-if="gecko.sex == 'female'"></i>
+                <strong>{{gecko.name}}</strong>
+            </div>
+            <div class="col-1-4">
+                Morph: {{gecko.morph}}
+            </div>
+            <div class="col-1-4">
+                Weight: {{gecko.weight}}
+            </div>
+            <div class="col-1-4">
+                Status: {{gecko.status}}
+            </div>
         </div>
     </div>
 </body>
