--- a/public/index.htm
+++ b/public/index.htm
@@ -2,9 +2,9 @@
 
 <head>
     <title>Gecko Tracker</title>
-    <link href="assets/css/styles.css" rel="stylesheet" type="text/css"/>
-    <link href="assets/css/grid.css" rel="stylesheet" type="text/css"/>
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+    <link href="assets/css/styles.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/grid.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <script src="assets/libs/angular.min.js"></script>
     <script src="app.js"></script>
 </head>
@@ -18,6 +18,7 @@
         <div class='location'>Dashboard</div>
     </div>
 
+    <!-- CONTAINER FOR LIST OF GECKOS -->
     <div class='content' ng-controller='GeckoListController'>
         <div ng-repeat='gecko in geckos' class="gecko-card grid" ng-class=gecko.sex>
             <div class="col-1-4">
@@ -36,5 +37,53 @@
             </div>
         </div>
     </div>
+
+    <br>
+    <hr>
+    <br>
+
+    <!-- ADD GECKO FORM -->
+    <div ng-controller='AddGeckoController'>
+
+        <form method="POST" action="/geckos" id="form">
+            <h1>Add Gecko Form</h1>
+            <div class="grid">
+                <div class="form-element">
+                    <label>Gecko's Name</label>
+                    <input type="text" placeholder="name of gecko" name="name">
+                </div>
+                <div class="form-element">
+                    <label>MORPH tYPE</label>
+                    <input type="text" placeholder="morph" name="morph">
+                </div>
+                <div class="form-element">
+                    <label>Weight</label>
+                    <input type="number" placeholder="weight in grams" name="weight">
+                </div>
+                <div class="form-element">
+                    <label>Date of Birth</label>
+                    <input type="date" placeholder="birthdate" name="birthDate">
+                </div>
+                <div class="form-element">
+                    <label>date of Purchase</label>
+                    <input type="date" placeholder="date of purchase" name="purchaseDate">
+                </div>
+                <div class="form-element">
+                    <label>ID Number</label>
+                    <input type="text" placeholder="unique ID number" name="uniqueID">
+                </div>
+                <div class="form-element">
+                    <label>Sex</label>
+                    <select name="sex">
+                        <option value=male>Male</option>
+                        <option value="female" selected>Female</option>
+                        <option value="unknown">Unknown</option>
+                    </select>
+                </div>
+            </div>
+            <button>Add Gecko</button>
+        </form>
+    </div>
 </body>
+
 </html>
