--- a/public/index.htm
+++ b/public/index.htm
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <div class='header'>
+    <div class='header' style='overflow: hidden; height: 56px;'>
+        <img src='assets/img/gecko_logo_small.png' style='float: left; width: 90px; margin-right: 10px;'></img>
         <div class='title'>Gecko<span class='bold'>Tracker</span></div>
     </div>
 
