Modified placeholder text

--- a/public/index.htm
+++ b/public/index.htm
@@ -55,15 +55,15 @@
             <div class="grid">
                 <div class="form-element">
                     <label>Gecko's Name</label>
-                    <input type="text" placeholder="name of gecko" ng-model="form.name">
+                    <input type="text" placeholder="ex. Tammy or Gecko #23" ng-model="form.name">
                 </div>
                 <div class="form-element">
                     <label>MORPH tYPE</label>
-                    <input type="text" placeholder="morph" ng-model="form.morph">
+                    <input type="text" placeholder="ex. Lavender Jungle Bandit" ng-model="form.morph">
                 </div>
                 <div class="form-element">
-                    <label>Weight</label>
-                    <input type="number" placeholder="weight in grams" ng-model="form.weight">
+                    <label>Weight (grams)</label>
+                    <input type="number" placeholder="ex. 33" ng-model="form.weight">
                 </div>
                 <div class="form-element">
                     <label>Date of Birth</label>
@@ -75,7 +75,7 @@
                 </div>
                 <div class="form-element">
                     <label>ID</label>
-                    <input type="text" placeholder="unique ID number" ng-model="form.uniqueID">
+                    <input type="text" placeholder="ex. 16M24" ng-model="form.uniqueID">
                 </div>
                 <div class="form-element">
                     <label>Location</label>
