Setup index.html for views

--- a/public/index.htm
+++ b/public/index.htm
@@ -1,12 +1,31 @@
+
+<!-------------------------------------------------------------------------
+| public/index.html
+|--------------------------------------------------------------------------
+| Base html file handles loading in all the libraries and Angular elements.
+|
+| Created June 2016 by Joi W.
+|------------------------------------------------------------------------->
+
 <html ng-app='geckoTracker'>
 
 <head>
     <title>Gecko Tracker</title>
+
+    <!-- CSS -->
     <link href="assets/css/styles.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/grid.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+
+     <!-- JS -->
     <script src="assets/libs/angular.min.js"></script>
+
+    <!-- ANGULAR CUSTOM -->
     <script src="app.js"></script>
+    <script src="route.js"></script>
+    <script src="views/GeckoList/GeckoListController.js"></script>
+    <script src="views/AddGecko/AddGeckoController.js"></script>
+    <script src="views/GeckoDetails/GeckoDetailsController.js"></script>
 </head>
 
 <body ng-controller='GeckoListController'>
@@ -14,96 +33,8 @@
         <div class='title'>Gecko<span class='bold'>Tracker</span></div>
     </div>
 
-    <div class='navigation'>
-        <div class='location'>{{statusMsg}}</div>
-    </div>
 
-    <!-- CONTAINER FOR LIST OF GECKOS -->
-    <div class='content'>
-        <div ng-repeat='gecko in geckos' class="gecko-card grid" ng-class=gecko.sex>
-            <div class="col-1-4">
-                <i class='fa fa-mars' ng-if="gecko.sex == 'male'"></i>
-                <i class='fa fa-venus' ng-if="gecko.sex == 'female'"></i>
-                <strong>{{gecko.name}}</strong>
-            </div>
-            <div class="col-1-4">
-                Morph: {{gecko.morph}}
-            </div>
-            <div class="col-1-4">
-                Location: {{gecko.location}}
-            </div>
-            <div class="col-1-6">
-                Status: {{gecko.status}}
-            </div>
-            <div class="col-1-12 right">
-                <i class='fa fa-expand' ng-click="expand(gecko._id)"></i>
-                <i class='fa fa-trash' ng-click="deleteGecko(gecko._id,gecko.name)"></i>
-            </div>
-        </div>
-    </div>
-
-    <br>
-    <hr>
-    <br>
-
-    <!-- ADD GECKO FORM -->
-    <div ng-controller='AddGeckoController'>
-
-        <form name="addGeckoForm" id="form">
-            <h1>Add Gecko Form</h1>
-            <p style="color: red;">{{validationMsg}}</p>
-            <div class="grid">
-                <div class="form-element">
-                    <label>Gecko's Name</label>
-                    <input type="text" placeholder="ex. Tammy or Gecko #23" ng-model="form.name">
-                </div>
-                <div class="form-element">
-                    <label>MORPH tYPE</label>
-                    <input type="text" placeholder="ex. Lavender Jungle Bandit" ng-model="form.morph">
-                </div>
-                <div class="form-element">
-                    <label>Weight (grams)</label>
-                    <input type="number" placeholder="ex. 33" ng-model="form.weight">
-                </div>
-                <div class="form-element">
-                    <label>Date of Birth</label>
-                    <input type="date" placeholder="birthdate" ng-model="form.birthDate">
-                </div>
-                <div class="form-element">
-                    <label>date of Purchase</label>
-                    <input type="date" placeholder="date of purchase" ng-model="form.purchaseDate">
-                </div>
-                <div class="form-element">
-                    <label>ID</label>
-                    <input type="text" placeholder="ex. 16M24" ng-model="form.uniqueID">
-                </div>
-                <div class="form-element">
-                    <label>Location</label>
-                    <input type="text" placeholder="ex. Bin 2A" ng-model="form.location">
-                </div>
-                <div class="form-element">
-                    <label>Sex</label>
-                    <select ng-model="form.sex">
-                        <option value=male>Male</option>
-                        <option value="female">Female</option>
-                        <option value="unknown" selected>Unknown</option>
-                    </select>
-                </div>
-                <div class="form-element">
-                    <label>Status</label>
-                    <select ng-model="form.status">
-                        <option value="unknown" selected>Unknown</option>
-                        <option value="normal">Normal</option>
-                        <option value="gravid">Gravid</option>
-                        <option value="egg">Egg</option>
-                        <option value="sold">Sold</option>
-                        <option value="dead">Dead</option>
-                    </select>
-                </div>
-            </div>
-            <button ng-click="submitForm()">Add Gecko</button>
-        </form>
-    </div>
-</body>
-
+<!-- DYNAMIC ANGULAR CONTENT -->
+    <div ng-view></div>
+  </body>
 </html>
