Completed views setup. All working :)

--- a/public/index.htm
+++ b/public/index.htm
@@ -10,15 +10,19 @@
 <html ng-app='geckoTracker'>
 
 <head>
+    <base href="/">
     <title>Gecko Tracker</title>
 
     <!-- CSS -->
     <link href="assets/css/styles.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/grid.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <link href="assets/libs/ngDialog.min.css" rel="stylesheet" type="text/css" />
 
      <!-- JS -->
     <script src="assets/libs/angular.min.js"></script>
+    <script src="assets/libs/angular-route.min.js"></script>
+    <script src="assets/libs/ngDialog.min.js"></script>
 
     <!-- ANGULAR CUSTOM -->
     <script src="app.js"></script>
