add new gecko form toggle working.

--- a/public/index.htm
+++ b/public/index.htm
@@ -32,7 +32,7 @@
     <script src="views/GeckoDetails/GeckoDetailsController.js"></script>
 </head>
 
-<body ng-controller='GeckoListController'>
+<body >
     <div class='header'>
         <div class='title'>Gecko<span class='bold'>Tracker</span></div>
     </div>
