--- a/public/index.htm
+++ b/public/index.htm
@@ -18,11 +18,14 @@
     <link href="assets/css/grid.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <link href="assets/libs/ngDialog.min.css" rel="stylesheet" type="text/css" />
+    <link href="/node_modules/angular-toastr/dist/angular-toastr.css" rel="stylesheet" type="text/css" />
 
      <!-- JS -->
     <script src="assets/libs/angular.min.js"></script>
     <script src="assets/libs/angular-route.min.js"></script>
     <script src="assets/libs/ngDialog.min.js"></script>
+    <script src="/node_modules/angular-toastr/dist/angular-toastr.tpls.js"></script>
+    <script src="/node_modules/angular-animate/angular-animate.min.js"></script>
 
     <!-- ANGULAR CUSTOM -->
     <script src="app.js"></script>
