Added toastr (and ngAnimate). Used npm to fetch and reference the new angular stuff. Implemented the geckoService. Fixed an issue with database init in gecko.js

--- a/public/index.htm
+++ b/public/index.htm
@@ -33,6 +33,7 @@
     <script src="views/GeckoList/GeckoListController.js"></script>
     <script src="views/AddGecko/AddGeckoController.js"></script>
     <script src="views/GeckoDetails/GeckoDetailsController.js"></script>
+    <script src="services/GeckoService.js"></script>
 </head>
 
 <body >
