--- a/public/index.htm
+++ b/public/index.htm
@@ -34,6 +34,7 @@
     <script src="views/AddGecko/AddGeckoController.js"></script>
     <script src="views/GeckoDetails/GeckoDetailsController.js"></script>
     <script src="services/GeckoService.js"></script>
+    <script src="components/GeckoTable/GeckoTableDirective.js"></script>
 </head>
 
 <body >
