--- a/public/index.htm
+++ b/public/index.htm
@@ -17,22 +17,22 @@
     <link href="assets/css/styles.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/grid.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-    <link href="assets/libs/ngDialog.min.css" rel="stylesheet" type="text/css" />
+    <link href="/node_modules/ng-dialog/css/ngDialog.min.css" rel="stylesheet" type="text/css" />
     <link href="/node_modules/angular-toastr/dist/angular-toastr.css" rel="stylesheet" type="text/css" />
 
      <!-- JS -->
-    <script src="assets/libs/angular.min.js"></script>
-    <script src="assets/libs/angular-route.min.js"></script>
-    <script src="assets/libs/ngDialog.min.js"></script>
+    <script src="/node_modules/angular/angular.min.js"></script>
+    <script src="/node_modules/angular/angular-route.min.js"></script>
+    <script src="/node_modules/ng-dialog/ngDialog.min.js"></script>
     <script src="/node_modules/angular-toastr/dist/angular-toastr.tpls.js"></script>
     <script src="/node_modules/angular-animate/angular-animate.min.js"></script>
 
     <!-- ANGULAR CUSTOM -->
     <script src="app.js"></script>
     <script src="route.js"></script>
-    <script src="views/GeckoList/GeckoListController.js"></script>
-    <script src="views/AddGecko/AddGeckoController.js"></script>
-    <script src="views/GeckoDetails/GeckoDetailsController.js"></script>
+    <script src="views/DashboardView/DashboardViewController.js"></script>
+    <script src="views/DashboardView/AddGeckoController.js"></script>
+    <script src="views/GeckoDetailsView/GeckoDetailsViewController.js"></script>
     <script src="services/GeckoService.js"></script>
     <script src="components/GeckoTable/GeckoTableDirective.js"></script>
 </head>
