--- a/public/index.htm
+++ b/public/index.htm
@@ -21,9 +21,10 @@
     <link href="/node_modules/angular-toastr/dist/angular-toastr.css" rel="stylesheet" type="text/css" />
 
      <!-- JS -->
+    <script src="/node_modules/moment/moment.js"></script>
     <script src="/node_modules/angular/angular.min.js"></script>
-    <script src="/node_modules/angular/angular-route.min.js"></script>
-    <script src="/node_modules/ng-dialog/ngDialog.min.js"></script>
+    <script src="/node_modules/angular-route/angular-route.min.js"></script>
+    <script src="/node_modules/ng-dialog/js/ngDialog.min.js"></script>
     <script src="/node_modules/angular-toastr/dist/angular-toastr.tpls.js"></script>
     <script src="/node_modules/angular-animate/angular-animate.min.js"></script>
 
@@ -35,6 +36,8 @@
     <script src="views/GeckoDetailsView/GeckoDetailsViewController.js"></script>
     <script src="services/GeckoService.js"></script>
     <script src="components/GeckoTable/GeckoTableDirective.js"></script>
+    <script src="components/EggTable/EggTableDirective.js"></script>
+    <script src="components/EventsTable/EventsTableDirective.js"></script>
 </head>
 
 <body >
