--- a/public/index.htm
+++ b/public/index.htm
@@ -18,6 +18,7 @@
     <link href="assets/css/grid.css" rel="stylesheet" type="text/css" />
     <link href="assets/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <link href="/node_modules/ng-dialog/css/ngDialog.min.css" rel="stylesheet" type="text/css" />
+    <link href="/node_modules/ng-dialog/css/ngDialog-theme-plain.min.css" rel="stylesheet" type="text/css" />
     <link href="/node_modules/angular-toastr/dist/angular-toastr.css" rel="stylesheet" type="text/css" />
 
      <!-- JS -->
