--- a/public/index.htm
+++ b/public/index.htm
@@ -39,6 +39,7 @@
     <script src="components/GeckoTable/GeckoTableDirective.js"></script>
     <script src="components/EggTable/EggTableDirective.js"></script>
     <script src="components/EventsTable/EventsTableDirective.js"></script>
+     <script src="components/GeckoDetail/GeckoDetailDirective.js"></script>
 </head>
 
 <body >
