More CSS organizing

--- a/public/index.htm
+++ b/public/index.htm
@@ -41,8 +41,8 @@
 </head>
 
 <body >
-    <div class='header'>
-        <div class='title'>Gecko<span class='bold'>Tracker</span></div>
+    <div class='HEADER'>
+        Gecko<span class='bold'>Tracker</span>
     </div>
 
 
