Moved addGeckoForm to its own directive

--- a/public/index.htm
+++ b/public/index.htm
@@ -38,6 +38,7 @@
     <script src="components/EggTable/EggTableDirective.js"></script>
     <script src="components/EventsTable/EventsTableDirective.js"></script>
      <script src="components/GeckoDetail/GeckoDetailDirective.js"></script>
+    <script src="components/AddGeckoForm/AddGeckoFormDirective.js"></script>
 
 
 </head>
