Added link to Material Icons and Gecko Metrics Directive.

--- a/public/index.htm
+++ b/public/index.htm
@@ -18,6 +18,8 @@
     <link href="/node_modules/ng-dialog/css/ngDialog.min.css" rel="stylesheet" type="text/css" />
     <link href="/node_modules/ng-dialog/css/ngDialog-theme-plain.min.css" rel="stylesheet" type="text/css" />
     <link href="/node_modules/angular-toastr/dist/angular-toastr.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 
      <!-- JS -->
     <script src="/node_modules/moment/moment.js"></script>
@@ -39,6 +41,7 @@
     <script src="components/EventsTable/EventsTableDirective.js"></script>
      <script src="components/GeckoDetail/GeckoDetailDirective.js"></script>
     <script src="components/AddGeckoForm/AddGeckoFormDirective.js"></script>
+    <script src="components/GeckoMetrics/GeckoMetricsDirective.js"></script>
 
 
 </head>
