--- a/public/index.htm
+++ b/public/index.htm
@@ -28,7 +28,9 @@
     <script src="/node_modules/ng-dialog/js/ngDialog.min.js"></script>
     <script src="/node_modules/angular-toastr/dist/angular-toastr.tpls.js"></script>
     <script src="/node_modules/angular-animate/angular-animate.min.js"></script>
-
+    <script src="/node_modules/ng-flow/dist/ng-flow-standalone.min.js"></script>
+	<script src="/node_modules/ng-file-upload/dist/ng-file-upload.min.js"></script>
+	
     <!-- ANGULAR CUSTOM -->
     <script src="app.js"></script>
     <script src="route.js"></script>
@@ -39,10 +41,10 @@
     <script src="components/GeckoTable/GeckoTableDirective.js"></script>
     <script src="components/EggTable/EggTableDirective.js"></script>
     <script src="components/EventsTable/EventsTableDirective.js"></script>
-     <script src="components/GeckoDetail/GeckoDetailDirective.js"></script>
+    <script src="components/GeckoDetail/GeckoDetailDirective.js"></script>
     <script src="components/AddGeckoForm/AddGeckoFormDirective.js"></script>
     <script src="components/GeckoMetrics/GeckoMetricsDirective.js"></script>
-
+    <script src="components/PhotoGallery/PhotoGalleryDirective.js"></script>
 
 </head>
 
