Added weight chart directive.

--- a/public/index.htm
+++ b/public/index.htm
@@ -28,6 +28,7 @@
     <script src="/node_modules/ng-dialog/js/ngDialog.min.js"></script>
     <script src="/node_modules/angular-toastr/dist/angular-toastr.tpls.js"></script>
     <script src="/node_modules/angular-animate/angular-animate.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
     <!-- ANGULAR CUSTOM -->
     <script src="app.js"></script>
@@ -42,6 +43,7 @@
      <script src="components/GeckoDetail/GeckoDetailDirective.js"></script>
     <script src="components/AddGeckoForm/AddGeckoFormDirective.js"></script>
     <script src="components/GeckoMetrics/GeckoMetricsDirective.js"></script>
+     <script src="components/Charts/WeightChartDirective.js"></script>
 
 
 </head>
