--- a/public/index.htm
+++ b/public/index.htm
@@ -30,7 +30,7 @@
     <script src="/node_modules/angular-animate/angular-animate.min.js"></script>
     <script src="/node_modules/ng-flow/dist/ng-flow-standalone.min.js"></script>
 	<script src="/node_modules/ng-file-upload/dist/ng-file-upload.min.js"></script>
-	
+	<script src="/node_modules/angular-modal-service/dst/angular-modal-service.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
     <!-- ANGULAR CUSTOM -->
@@ -50,6 +50,7 @@
     <script src="components/AddEventForm/AddEventFormDirective.js"></script>
     <script src="components/Charts/WeightChartDirective.js"></script>
     <script src="components/PhotoGallery/PhotoGalleryDirective.js"></script>
+    <script src="components/Modal/ModalDirective.js"></script>
 
 </head>
 
