Completed generic modals, tweaked styling in _modal.less, added a demo view for showing off components.

--- a/public/index.htm
+++ b/public/index.htm
@@ -39,6 +39,7 @@
     <script src="views/DashboardView/DashboardViewController.js"></script>
     <script src="views/DashboardView/AddGeckoController.js"></script>
     <script src="views/GeckoDetailsView/GeckoDetailsViewController.js"></script>
+    <script src="views/DemosView/DemosViewController.js"></script>
     <script src="services/GeckoService.js"></script>
     <script src="components/GeckoTable/GeckoTableDirective.js"></script>
     <script src="components/EggTable/EggTableDirective.js"></script>
@@ -51,6 +52,7 @@
     <script src="components/Charts/WeightChartDirective.js"></script>
     <script src="components/PhotoGallery/PhotoGalleryDirective.js"></script>
     <script src="components/Modal/ModalDirective.js"></script>
+    <script src="components/Modal/GenericModalDirectives.js"></script>
 
 </head>
 
