Notifications component mostly complete. Had to refactor some code in geckoService.js and gecko.js for events, as well as adding notifications to REST API and database.

--- a/public/index.htm
+++ b/public/index.htm
@@ -55,6 +55,8 @@
     <script src="components/Modal/GenericModalDirectives.js"></script>
     <script src="components/SearchBox/SearchBoxDirective.js"></script>
     <script src="components/FormFields/FormFieldDirectives.js"></script>
+    <script src="components/NotificationsSettings/NotificationsSettingsDirective.js"></script>
+    <script src="components/AddNotificationForm/AddNotificationFormController.js"></script>
 
 </head>
 
