--- a/public/index.htm
+++ b/public/index.htm
@@ -1,4 +1,3 @@
-
 <!-------------------------------------------------------------------------
 | public/index.html
 |--------------------------------------------------------------------------
@@ -18,10 +17,9 @@
     <link href="/node_modules/ng-dialog/css/ngDialog.min.css" rel="stylesheet" type="text/css" />
     <link href="/node_modules/ng-dialog/css/ngDialog-theme-plain.min.css" rel="stylesheet" type="text/css" />
     <link href="/node_modules/angular-toastr/dist/angular-toastr.css" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-     <!-- JS -->
+    <!-- JS -->
     <script src="/node_modules/moment/moment.js"></script>
     <script src="/node_modules/angular/angular.min.js"></script>
     <script src="/node_modules/angular-route/angular-route.min.js"></script>
@@ -29,8 +27,8 @@
     <script src="/node_modules/angular-toastr/dist/angular-toastr.tpls.js"></script>
     <script src="/node_modules/angular-animate/angular-animate.min.js"></script>
     <script src="/node_modules/ng-flow/dist/ng-flow-standalone.min.js"></script>
-	<script src="/node_modules/ng-file-upload/dist/ng-file-upload.min.js"></script>
-	<script src="/node_modules/angular-modal-service/dst/angular-modal-service.js"></script>
+    <script src="/node_modules/ng-file-upload/dist/ng-file-upload.min.js"></script>
+    <script src="/node_modules/angular-modal-service/dst/angular-modal-service.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
     <!-- ANGULAR CUSTOM -->
@@ -58,13 +56,16 @@
 
 </head>
 
-<body >
-    <div class='HEADER'>
+<body>
+    <div id='HEADER'>
         Gecko<span class='bold'>Tracker</span>
+        <i class="fa fa-info-circle" aria-hidden="true"></i>
+        <i class="fa fa-github" aria-hidden="true"></i>
     </div>
 
 
-<!-- DYNAMIC ANGULAR CONTENT -->
+    <!-- DYNAMIC ANGULAR CONTENT -->
     <div ng-view></div>
-  </body>
+</body>
+
 </html>
