--- a/public/index.htm
+++ b/public/index.htm
@@ -29,6 +29,7 @@
     <script src="/node_modules/ng-flow/dist/ng-flow-standalone.min.js"></script>
     <script src="/node_modules/ng-file-upload/dist/ng-file-upload.min.js"></script>
     <script src="/node_modules/angular-modal-service/dst/angular-modal-service.js"></script>
+    <script src="/node_modules/angular-logger/dist/angular-logger.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
     <!-- ANGULAR CUSTOM -->
