Completed notes component.

--- a/public/index.htm
+++ b/public/index.htm
@@ -57,6 +57,7 @@
     <script src="components/NotificationsSettings/NotificationsSettingsDirective.js"></script>
     <script src="components/AddNotificationForm/AddNotificationFormController.js"></script>
     <script src="components/LoadingScreen/LoadingScreenDirective.js"></script>
+    <script src="components/GeckoNotes/GeckoNotesDirective.js"></script>
 
 </head>
 
