Cleaning up gecko table, in progress

--- a/public/index.htm
+++ b/public/index.htm
@@ -21,6 +21,7 @@
 
     <!-- JS -->
     <script src="/node_modules/moment/moment.js"></script>
+    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
     <script src="/node_modules/angular/angular.min.js"></script>
     <script src="/node_modules/angular-route/angular-route.min.js"></script>
     <script src="/node_modules/ng-dialog/js/ngDialog.min.js"></script>
@@ -46,7 +47,7 @@
     <script src="components/GeckoDetail/GeckoDetailDirective.js"></script>
     <script src="components/AddGeckoForm/AddGeckoFormController.js"></script>
     <script src="components/GeckoMetrics/GeckoMetricsDirective.js"></script>
-    <script src="components/GeckoPicker/GeckoPickerDirective.js"></script>
+    <script src="components/GeckoPicker/GeckoPicker2Directive.js"></script>
     <script src="components/AddEventForm/AddEventFormController.js"></script>
     <script src="components/Charts/WeightChartDirective.js"></script>
     <script src="components/PhotoGallery/PhotoGalleryDirective.js"></script>
@@ -58,6 +59,7 @@
     <script src="components/AddNotificationForm/AddNotificationFormController.js"></script>
     <script src="components/LoadingScreen/LoadingScreenDirective.js"></script>
     <script src="components/GeckoNotes/GeckoNotesDirective.js"></script>
+    <script src="components/GeckoTimeline/GeckoTimelineDirective.js"></script>
 
 </head>
 
